--- a/src/components/characters/Characters.module.css
+++ b/src/components/characters/Characters.module.css
@@ -2,11 +2,45 @@
   padding: 30px
 }
 
+.block_pagination {
+  padding: 20px;
+}
+
 .characters {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   row-gap: 20px;
   justify-content: space-between;
-  
+}
+
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+}
+
+.pagination li {
+  list-style-type: none;
+}
+.page {
+  background-color: #191a2ca4;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  color: white
+}
+
+.active {
+  font-weight: bold;
+  background-color: #191a2c;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  color: white
 }
