--- a/src/components/characters/character/Character.module.css
+++ b/src/components/characters/character/Character.module.css
@@ -1,9 +1,10 @@
 .block {
   background-color: #191a2c;
-  width: 15%;
+  width: 200px;
   border-radius: 20px;
   padding: 30px;
   color: white;
+  height: 350px;
 }
 
 .img {
@@ -14,7 +15,6 @@
 .info {
   display: flex;
   flex-direction: column;
-  max-height: 420px;
 }
 
 .name {
@@ -37,3 +37,21 @@
   font-weight: bold;
 }
 
+@media (max-width: 1000px) {
+  .info {
+    display: flex;
+    flex-direction: column;
+    height: 350px;
+  }
+}
+@media (max-width: 620px) {
+  .block {
+    width: auto;
+  }
+  .info {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    max-height: 700px;
+  }
+}
