--- a/src/components/characters/character/Modal.module.css
+++ b/src/components/characters/character/Modal.module.css
@@ -42,3 +42,25 @@
   height: 100%;
   border-radius: 10px;
 }
+
+@media (max-width: 800px) {
+  .modal_content {
+    flex-direction: column;
+  }
+}
+@media (max-width: 450px) {
+  .img {
+    width: 250px;
+  }
+  .info {
+    width: 250px;
+  }
+}
+@media (max-width: 350px) {
+  .img {
+    width: 200px;
+  }
+  .info {
+    width: 200px;
+  }
+}
